deleted unnieded files and resource

--- a/#src/scss/_mixins.scss
+++ b/#src/scss/_mixins.scss
@@ -12,7 +12,18 @@
 }
 
 // =========================================================================
-@mixin scale-revers {
-    transform: scaleX(0.9);
-    transform: scaleY(0.83);
-}
+// @mixin scale-revers {
+//     transform: scaleX(0.9);
+//     transform: scaleY(0.83);
+// }
+
+
+// @media (max-width: 1199.98px) {
+    
+// }
+// @media (max-width: 992.98px) {
+    
+// }
+// @media (max-width: 480.98px) {
+    
+// }
