--- a/#src/scss/_variables.scss
+++ b/#src/scss/_variables.scss
@@ -1,6 +1,6 @@
 // color =============================================================================
-$main-design-color: #8D81AC;
-$main-color: #fff;
+$main-design-color: #d88407;
+$main-color: rgb(22, 22, 22);
 $secondary-color: #848E97;
 $other-secondary-color: #A291A5;
 $top-title-color: #323232;
