before create nev brunch

--- a/#src/scss/_header.scss
+++ b/#src/scss/_header.scss
@@ -6,10 +6,49 @@
 }
 
 
+  .header {
+    .menu-wrapper {
+        box-shadow: 0 -1px 10px 1px #c5c5c5;
+      .main-logo {
+        &__ref {
+          &:hover {}
+          &:active {}
+          &:focus {}
+        }
+        .main-logo__text {
+        }
+      }
+      .menu__list {
+        li {
+        }
+        .menu__item {
+          &:hover {}
+          &:active {}
+          &:focus {}
+        }
+        .menu__item.current {
+          &:hover {}
+          &:active {}
+          &:focus {}
+        }
+      }
+      .menu__smm-wrapper {
+        .smm-wrapper_item {
+        }
+      }
+      .menu__contacts {
+        .contacts__phone {
+        }
+        a {
+          &:hover {}
+          &:active {}
+          &:focus {}
+        }
+      }
+    }
+  }
 
-.main-logo {
-    display: inline;
-}
+
 
 // burger-menu ==========================================================================================================
 // .icon-menu {
