--- a/status-kiev-law/css/style.css
+++ b/status-kiev-law/css/style.css
@@ -129,8 +129,22 @@ a {
   position: relative;
 }
 
-.main-logo {
-  display: inline;
+.header .menu-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: 0 -1px 10px 1px #c5c5c5;
+          box-shadow: 0 -1px 10px 1px #c5c5c5;
+}
+
+.header .menu-wrapper .menu__list .menu__item {
+  color: #161616;
 }
 
 ._container {
