--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -6,7 +6,9 @@
 @import 'main-page';
 @import 'footer';
 
-
+body{
+    font-family: "Montserrat", sans-serif;
+}
 
 // container =============================================================================
 
